--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "puppeteer": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
