--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "mongoose": "^5.9.25",
     "puppeteer": "^3.3.0"
   },
   "devDependencies": {
